# dossier

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  project-acl.example.json  pyproject.toml  suite.env.example
.claude/: settings.json
.github/workflows/: ci.yml
deploy/: docker-compose.yml
deploy/k8s/: README.md  configmap-project-acl.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
deploy/winsw/: README.md  dossier-service.xml  install.ps1
design/ui-shell/: README.md  index.html  shell.css
docs/: adr-001-two-family-auth.md  deploy.md  develop-against-lock.md  provenance-model.md  publication-review.md
githooks/: pre-commit
plans/: 001-mvp.md  002-auth-and-identity.md  003-ldap-integration.md  004-teams-and-split-views.md  005-adversarial-review.md  006-convergence-on-regista.md  007-canonical-workflow-convergence.md  008-canonical-deferred-state.md  009-knowledge-note-entity.md  010-unify-canonical-workflow.md  011-multi-project-fronting.md  012-project-ownership.md  013-suite-cohesion-human-face.md  014-cross-project-human-interface.md  015-key-management-ux.md  016-windows-service-spike.md  017-agent-activity-window.md  018-working-views-and-notifications.md  019-durable-notifications-and-digests.md  020-entra-oidc-and-step-up.md  021-evidence-review-and-accessibility.md  022-web-administration.md  023-central-service-deployment.md  024-suite-console-ui-shell.md  025-agent-lodged-human-tasks.md
reflections/: 2026-06-22-glm-5-2.md  2026-06-28-glm-5-2.md  2026-06-29-glm-5-2.md  2026-06-30-glm-5-2.md  2026-07-01-glm-5-2-2.md  2026-07-01-glm-5-2.md  2026-07-03-glm-5-2-2.md  2026-07-03-glm-5-2-3.md  2026-07-03-glm-5-2.md  2026-07-04-glm-5-2-2.md  2026-07-04-glm-5-2.md  2026-07-05-glm-5-2-2.md  2026-07-05-glm-5-2.md  2026-07-09-glm-5-2.md  2026-07-13-glm-5-2.md
scripts/: audit_history_identifiers.py  check_committed_identifiers.py  convergence_e2e_proof.py  dev-install.py  gen-k8s-secret.py  install-git-hooks.sh  suite_lock.py
tests/: _doubles.py  conftest.py  helpers.py  test_administration.py  test_app.py  test_architecture.py  test_auth.py  test_bug_fixes.py  test_cli_conformance.py  test_cli_doctor_stdout_contract.py  test_deferred.py  test_develop_against_lock.py  test_e2e_postgres.py  test_evidence.py  test_gateway.py  test_health.py  test_k8s_deployment.py  test_knowledge.py  test_ldap.py  test_ldap_integration.py  test_links_ui.py  test_multi.py  test_operations.py  test_ownership.py  test_plan014.py  test_plan014_wi15.py  test_plan015.py  test_plan015_postgres.py  test_plan018.py  test_prod_posture.py  test_project_access.py  test_provenance.py  test_provision_check.py  test_secrets.py  test_shell.py  test_suite_env.py  test_throttle.py  test_ui.py  test_validators.py
(+66 files in other folders)
