[project]
name = "dossier"
version = "0.0.1"
description = "Lightweight human-facing work-item tracker that is also a provenance instrument, built on regista."
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # Backend: regista provides durable state, validated transitions, the event
    # log, actors, and signing. Sibling library — install editable for dev:
    #   uv pip install -e ../regista
    "regista>=0.4.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",        # signed session cookies
]

[project.optional-dependencies]
auth-ldap = ["ldap3>=2.9"]     # LDAP/AD auth (cert-watch pattern), optional
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",             # test client
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
dossier = "dossier.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dossier"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
