[project]
name = "dossier-hraedon"
version = "0.0.1"
description = "Lightweight human-facing work-item tracker that is also a provenance instrument, built on regista."
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # Backend: regista provides durable state, validated transitions, the event
    # log, actors, and signing. Distribution name is `regista-hraedon` on PyPI
    # (import name remains `regista`). For dev, install editable from sibling:
    #   uv pip install -e ../regista
    "regista-hraedon>=0.5.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",        # signed session cookies
    "PyNaCl>=1.5",              # Ed25519 keypair generation for per-actor signing
]

[project.optional-dependencies]
auth-ldap = ["ldap3>=2.9"]     # LDAP/AD auth (cert-watch pattern), optional
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",             # test client
    "ruff>=0.5",
    "mypy>=1.10",
    "ldap3>=2.9",              # LDAP/AD auth tests (mocked + integration)
]

[project.scripts]
dossier = "dossier.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dossier"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "postgres: tests that require a live Postgres (skip if unavailable)",
    "ldap_e2e: tests that require a live LDAP/AD server (skip if unavailable)",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
